# codex-gameserver-expansion

./: .gitignore  AGENTS.md  CLONE_GUIDE.md  CODING_GUIDE.md  POLICIES.md  PRODUCT.md  STACK.md  STATE.md  TEST_STRATEGY.md  VERSIONING.md  verify.sh
.github/workflows/: ci.yml
.notuse/: SEQUENCE_PROMPTS.md  VERSION_PROMPTS.md
design/infra/: v0.1.0-stack.md
design/ops/: v0.7.0-observability.md  v0.8.0-perf-report.md  v1.0.0-runbook.md
design/protocol/: contract.md
design/server/: v0.1.0-overview.md  v0.2.0-auth.md  v0.3.0-tick-loop.md  v0.4.0-backpressure-reconnect.md  v0.5.0-match-session.md  v0.6.0-rating-leaderboard.md  v1.0.0-overview.md
infra/: docker-compose.yml
infra/compose/: e2e.yml  it.yml
infra/db/migrations/: 001_init.sql
infra/nginx/: default.conf
reports/: v1.1.0.md
scripts/: build.sh  install-deps.sh  test-e2e.sh  test-it.sh  test-unit.sh
server/: CMakeLists.txt  Dockerfile
server/include/server/: api_response.hpp  app.hpp  auth.hpp  config.hpp  db_client.hpp  http_session.hpp  match_queue.hpp  observability.hpp  rating.hpp  realtime.hpp  reconnect.hpp  result_repository.hpp  result_service.hpp  session_manager.hpp  simulation.hpp  websocket_session.hpp
server/src/: api_response.cpp  app.cpp  auth.cpp  db_client.cpp  http_session.cpp  main.cpp  match_queue.cpp  observability.cpp  rating.cpp  realtime.cpp  reconnect.cpp  result_repository.cpp  result_service.cpp  session_manager.cpp  simulation.cpp  websocket_session.cpp
server/tests/e2e/: auth_flow_test.cpp  metrics_ops_test.cpp  rating_leaderboard_test.cpp  reconnect_backpressure_test.cpp  session_flow_test.cpp
server/tests/it/: finalize_it_test.cpp
server/tests/unit/: json_envelope_test.cpp  rating_update_test.cpp  simulation_determinism_test.cpp
tools/perf/: harness.py
